name:                rpki-repository-server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/rpki-repository-server#readme
license:             BSD3
license-file:        LICENSE
author:              Rafael Lourenço Cintra
maintainer:          rcintra@pobox.com
copyright:           2017 Rafael Lourenço Cintra
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.org

library
  hs-source-dirs:      src
  exposed-modules:     RPKI.Repository.Server
                     , RPKI.Repository.Notification
                     , RPKI.Repository.Snapshot
                     , RPKI.Repository.XML
  build-depends:       base >= 4.7 && < 5
                     , warp
                     , wai-app-static
                     , hxt 
                     , hexpat
                     , bytestring
  default-language:    Haskell2010

executable rpki-repository-server
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , rpki-repository-server
  